# Gardi

./: .gitignore  README.md  inter-station-timings.csv  patterns.json  pyproject.toml  requirements.txt  valid-rake-links-columns.txt
gardi/: __init__.py  __main__.py  gardi.py  simulator.py  ui.py
gardi/core/: analyzer.py  csv_builder.py  data_builder.py  filters.py  graph_builder.py  models.py  parser.py  rake_operations.py  replacement_analyzer.py  utils.py
